<resources>
    <string name="app_name">adapter</string>
    <string name="add_flower">Add Flower</string>

    <string name="flower1_name">Rose</string>
    <string name="flower2_name">Freesia</string>
    <string name="flower3_name">Lily</string>
    <string name="flower4_name">Sunflower</string>
    <string name="flower5_name">Peony</string>
    <string name="flower6_name">Daisy</string>
    <string name="flower7_name">Lilac</string>
    <string name="flower8_name">Marigold</string>
    <string name="flower9_name">Poppy</string>
    <string name="flower10_name">Daffodil</string>
    <string name="flower11_name">Dahlia</string>
    <string name="flower12_name">Tulip</string>

    <string name="flower1_description">Rose comes from the Latin word Rosa. There are over 100
        species of the rose. </string>
    <string name="flower2_description">Freesias bloom during spring and are native to
        Africa.</string>
    <string name="flower3_description">Lilies have the longest in vase lifespan of any cut
        bloom.</string>
    <string name="flower4_description">Mature Sunflowers face east and are native too the United
        States.</string>
    <string name="flower5_description">Peony plants can live to be 100 years old.</string>
    <string name="flower6_description">Daisies are cousins with Sunflowers.</string>
    <string name="flower7_description">Lilacs belong to the olive family.</string>
    <string name="flower8_description">Marigolds come in orange, reed, maroon and yellow.</string>
    <string name="flower9_description">Poppies can be over 3 feet tall.</string>
    <string name="flower10_description">Daffodils are referred to as Lent Lilies in England</string>
    <string name="flower11_description">Dahlia is named after the Swedish botanist Anders
        Dahl</string>
    <string name="flower12_description">There are over 150 species of tulips.</string>

    <string name="flower_string">Flowers</string>
    <string name="flower_finder">Flower finder</string>
    <string name="flower_description_edit_text">Flower Description</string>
    <string name="flower_name_edit_text">Flower Name</string>
    <string name="done_button_text">Done</string>
    <string name="fab_content_description">fab</string>
    <string name="flower_image_content_description">Image of flower</string>
    <string name="remove_this_flower">Remove this flower</string>
    <string name="simple_recycleview">simple recycleview</string>
    <string name="animated_adapter">Animated Adapter</string>
    <string name="recycle_view">Recycle view</string>
    <string name="item">Item</string>
    <string name="btnrecycleview">btnRecycleView</string>
    <string name="moviename">MovieName</string>
    <string name="_10">10</string>
    <string name="_10rate">/10</string>
    <string name="english">ENGLISH</string>
    <string name="_2h_10min_36sec">2h 10m 36s</string>
    <string name="todo">TODO</string>
    <string name="recycle_practice">Recycle practice</string>
    <string name="series">series</string>
    <string name="advance_recycleview">advance RecycleView</string>
    <string name="title">Title</string>
    <string name="nested_recycleview">nested RecycleView</string>
    <string name="room_recyle">room recycler</string>
    <string name="firstname">FIRSTNAME</string>
    <string name="number">NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="save">save</string>
    <string name="first_name">First Name</string>
    <string name="number_item">Number</string>
    <string name="email_item">Email</string>
    <string name="please_enter_first_name">please Enter First Name</string>
    <string name="please_enter_email">please Enter Email</string>
    <string name="please_enter_number">please Enter Number</string>
    <string name="data_saved_successfully">Data saved successfully</string>
    <string name="this_number_already_exists">This number already exists</string>
    <string name="user_updated_successfully">User updated successfully</string>
</resources>