<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAppActivity">
    <Button
        android:id="@+id/btnSimpleAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_recycleview"/>
    <Button
        android:id="@+id/btnRecycleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnrecycleview"/>
    <Button
        android:id="@+id/btnPractice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycle_practice"/>
    <Button
        android:id="@+id/btnadvanceRecycleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advance_recycleview"/>
    <Button
        android:id="@+id/btnnestedRecycleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nested_recycleview"/>
    <Button
        android:id="@+id/btnAnimatedAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animated_adapter"/>
</LinearLayout>