<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_10dp"
    android:layout_marginTop="@dimen/_10dp"
    android:layout_marginEnd="@dimen/_10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/lay_bg"
    android:padding="@dimen/_10dp">

    <ImageView
        android:id="@+id/imgImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgEdit"
        app:layout_constraintStart_toEndOf="@+id/imgImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_mode_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/imgDelete"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintTop_toTopOf="@+id/imgDelete" />

    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/number_item"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imgDelete" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/email_item"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>